# AudioTransport

./: .gitignore  CMakeLists.txt  README.md
AudioUtilities/: CMakeLists.txt
AudioUtilities/include/AudioUtilities/: ChooseDevices.hpp  ChooseMIDIDevices.hpp  CoordinateTransforms.hpp  ISTFT.hpp  InputStream.hpp  MIDIStream.hpp  OutputStream.hpp  Plotting.hpp  STFT.hpp  StreamException.hpp  Window.hpp
AudioUtilities/src/: ChooseDevices.cpp  ChooseMIDIDevices.cpp  CoordinateTransforms.cpp  ISTFT.cpp  InputStream.cpp  MIDIStream.cpp  OutputStream.cpp  Plotting.cpp  STFT.cpp  Window.cpp
AudioUtilities/test/: ChooseDevicesTest.cpp  ChooseMIDIDevicesTest.cpp  CoordinateTransformsTest.cpp  InputOutputStreamTest.cpp  InputStreamTest.cpp  MIDIStreamTest.cpp  OutputStreamTest.cpp  STFTTest.cpp
Paper/: bibliography.bib  paper.tex
include/Vocoder/: BidirectionalTransportVocoder.hpp  BidirectionalVocoder.hpp  ClassicVocoder.hpp  PhaseVocoder.hpp  SpectralMass.hpp  Transport.hpp  TransportVocoder.hpp
paper/: paper.bbl  paper.blg  paper.out  paper.tex  paper2.tex
src/: BidirectionalTransportVocoder.cpp  BidirectionalVocoder.cpp  ClassicVocoder.cpp  Phase.cpp  PhaseVocoder.cpp  SpectralPiece.cpp  Transport.cpp  TransportVocoder.cpp
test/: BidirectionalTransportVocoderTest.cpp  BidirectionalVocoderTest.cpp  ClassicVocoderTest.cpp  TransportVocoderTest.cpp
